Fix issue with left sidebar for small device (Overlapp)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,7 +38,8 @@
   overflow: visible;
   
   background-color: #f5f5f5;    
-  min-height: 100%;  
+  height: auto;       /*Update Dec 2025. Make sure it grows vertical. important for small devices */
+  min-height: auto;   /*Update Dec 2025. Make sure it grows vertical. important for small devices */
   border-radius: 5px; /* Rounded corners */
 }
 
